--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,10 @@ body {
   margin-bottom: 60px;
 }
 
+.inner-page .main-header {
+  margin-bottom: 55px;
+}
+
 .main-navigation {
   float: left;
   min-height: 70px;
@@ -106,6 +110,39 @@ body {
   float: right;
   min-height: 330px;
   width: 300px;
+}
+
+.inner-page .main-heading {
+  margin-bottom: 20px;
+}
+
+.breadcrumbs {
+  margin-bottom: 55px;
+}
+
+.big-heading {
+  margin-bottom: 65px;
+}
+
+.inner-content {
+  margin-bottom: 75px;
+}
+
+.inner-content-colums + .inner-content-columns {
+  margin-top: 60px;
+}
+
+.inner-content-column-left,
+.inner-content-column-right {
+  width: 460px;
+}
+
+.inner-content-column-left {
+  float: left;
+}
+
+.inner-content-column-right {
+  float: right;
 }
 
 .main-footer {
