--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,27 @@ body {
   margin-top: 25px;
 }
 
+.product-showcase .large-image {
+  height: 498px;
+  margin-bottom: 20px;
+  width: 460px;
+}
+
+.product-showcase .small-image {
+  height: 149px;
+  float: left;
+  margin-right: 20px;
+  width: 140px;
+}
+
+.product-showcase .small-image:last-child {
+  margin-right: 0;
+}
+
+.product-info {
+  padding-left: 70px;
+}
+
 .main-footer {
   margin-top: 65px;
   padding-bottom: 40px;
