--- a/css/style.css
+++ b/css/style.css
@@ -225,17 +225,42 @@ body {
   margin-bottom: 55px;
 }
 
+.inner-logo {
+  height: 24px;
+  width: 130px;
+}
+
+.inner-logo img {
+  height: 24px;
+  width: 111px;
+}
+
 .main-navigation {
   float: left;
+  font-size: 0;
   min-height: 70px;
   width: 780px;
 }
 
+.main-navigation .inner-logo {
+  display: inline-block;
+  padding: 0;
+  padding-left: 10px;
+  padding-right: 19px;
+  vertical-align: middle;
+}
+
+.main-navigation .inner-logo:hover {
+  background: none;
+}
+
 .main-navigation ul {
   font-size: 0;
+  display: inline-block;
   list-style: none;
   margin: 0;
   padding: 0;
+  vertical-align: middle;
 }
 
 .main-navigation li {
