--- a/css/style.css
+++ b/css/style.css
@@ -711,6 +711,10 @@ input[type="radio"]:checked + label::after {
   margin-bottom: 75px;
 }
 
+.inner-content-columns > *:first-child {
+  margin-top: 0;
+}
+
 .inner-content-colums + .inner-content-columns {
   margin-top: 60px;
 }
@@ -741,13 +745,13 @@ input[type="radio"]:checked + label::after {
 .inner-content h2 {
   font-size: 24px;
   line-height: 1.25;
-  margin-bottom: 30px;
+  margin-bottom: 28px;
   margin-top: 60px;
 }
 
 .big-heading {
-  margin-bottom: 65px;
-  margin-top: 55px;
+  margin-bottom: 59px;
+  margin-top: 50px;
   text-align: center;
 }
 
@@ -794,7 +798,7 @@ input[type="radio"]:checked + label::after {
 
 .inner-content td {
   border: 2px solid #000;
-  padding: 10px 15px;
+  padding: 8px 15px;
 }
 
 .custom-list {
@@ -808,12 +812,8 @@ input[type="radio"]:checked + label::after {
   position: relative;
 }
 
-.custome-list-1 li {
-  margin-bottom: 15px;
-}
-
-.custome-list-2 li {
-  margin-bottom: 2px;
+.custom-list-1 li {
+  margin-bottom: 12px;
 }
 
 .custom-list li::before {
@@ -840,7 +840,7 @@ input[type="radio"]:checked + label::after {
 }
 
 .short-text {
-  padding-right: 80px;
+  padding-right: 75px;
 }
 
 /* ==========================================================================
