--- a/css/style.css
+++ b/css/style.css
@@ -1099,7 +1099,15 @@ input[type="radio"]:checked + label::after {
   position: fixed;
   top: 50%;
   width: 766px;
-  z-index: 20;
+}
+
+.modal-content-show {
+  animation: bounce 0.6s;
+  display: block;
+}
+
+.modal-error {
+  animation: shake 0.6s;
 }
 
 .modal-overlay {
@@ -1110,7 +1118,10 @@ input[type="radio"]:checked + label::after {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 10;
+}
+
+.modal-overlay-show {
+  display: block;
 }
 
 .modal-content-close {
@@ -1222,4 +1233,39 @@ input[type="radio"]:checked + label::after {
 .btn-login {
   margin-top: 15px;
   width: 100%;
+}
+
+/* ==========================================================================
+   Animations
+   ========================================================================== */
+@keyframes bounce {
+  0% {
+    transform: translateY(-2000px);
+  }
+
+  70% {
+    transform: translateY(30px);
+  }
+
+  90% {
+    transform: translateY(-10px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes shake {
+  0%, 100% {
+    transform: translateX(0);
+  }
+
+  10%, 30%, 50%, 70%, 90% {
+    transform: translateX(-10px);
+  }
+
+  20%, 40%, 60%, 80% {
+    transform: translateX(10px);
+  }
 }
