--- a/css/style.css
+++ b/css/style.css
@@ -356,7 +356,7 @@ input[type="radio"]:checked + label::after {
   display: inline-block;
   font-size: 16px;
   line-height: 1.25;
-  padding: 25px 23px;
+  padding: 25px 23px 27px;
   padding-left: 51px;
   position: relative;
   text-decoration: none;
@@ -1081,7 +1081,7 @@ input[type="radio"]:checked + label::after {
   display: none;
   left: 50%;
   margin-left: -230px;
-  padding: 50px 80px;
+  padding: 45px 80px 50px;
   position: absolute;
   top: 120px;
   width: 460px;
@@ -1092,13 +1092,18 @@ input[type="radio"]:checked + label::after {
   border: 7px solid #fff;
   box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
   display: none;
-  height: 561px;
+  height: 574px;
   left: 50%;
   margin-left: -390px;
-  margin-top: -280px;
+  margin-top: -287px;
   position: fixed;
   top: 50%;
-  width: 766px;
+  width: 780px;
+}
+
+.modal-content-map .modal-content-close {
+  right: -39px;
+  top: 0;
 }
 
 .modal-content-show {
@@ -1129,11 +1134,12 @@ input[type="radio"]:checked + label::after {
   border: 0;
   cursor: pointer;
   font-size: 0;
-  height: 22px;
+  height: 21px;
+  padding: 0;
   position: absolute;
   right: -34px;
-  top: 0;
-  width: 22px;
+  top: 9px;
+  width: 21px;
 }
 
 .modal-content-close::before,
@@ -1141,11 +1147,11 @@ input[type="radio"]:checked + label::after {
   background-color: #d0d0d0;
   border-radius: 1px;
   content: "";
-  height: 3px;
-  left: 2px;
+  height: 5px;
+  left: -2px;
   position: absolute;
-  top: 10px;
-  width: 19px;
+  top: 8px;
+  width: 25px;
 }
 
 .modal-content-close::before {
@@ -1160,12 +1166,12 @@ input[type="radio"]:checked + label::after {
   font-size: 30px;
   line-height: 1.4;
   margin: 0;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 
 .modal-content p {
   margin: 0;
-  margin-bottom: 14px;
+  margin-bottom: 11px;
 }
 
 .login-user,
@@ -1184,7 +1190,7 @@ input[type="radio"]:checked + label::after {
   font-weight: 700;
   line-height: 1.71428571;
   padding-right: 40px;
-  padding: 10px 15px;
+  padding: 8px 15px 7px;
   text-transform: uppercase;
   width: 300px;
 }
@@ -1225,16 +1231,25 @@ input[type="radio"]:checked + label::after {
   color: #663d15;
 }
 
+.login-remember label[for="login-remember"]::before {
+  margin-right: 12px;
+}
+
 .login-restore {
   color: #000;
   float: right;
 }
 
 .btn-login {
-  margin-top: 15px;
+  padding-bottom: 9px;
+  margin-top: 17px;
   width: 100%;
 }
 
+.inner-content .login-form {
+  margin: 0 auto;
+  width: 300px;
+}
 /* ==========================================================================
    Animations
    ========================================================================== */
