--- a/css/style.css
+++ b/css/style.css
@@ -87,11 +87,13 @@
 
 /* Apply a natural box layout model to all elements, but allowing components to change */
 html {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 *, *:before, *:after {
-  box-sizing: inherit;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
 }
 
 html, body {
@@ -247,7 +249,8 @@ input[type="radio"]:checked + label::after {
   position: absolute;
   right: 18px;
   top: 6px;
-  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
   width: 8px;
 }
 
@@ -387,7 +390,8 @@ input[type="radio"]:checked + label::after {
    ========================================================================== */
 .main-footer {
   background: #252525 url("../img/dark-pattern-bg.jpg");
-  box-shadow: inset 0px 30px 40px -15px #000;
+  -webkit-box-shadow: inset 0px 30px 40px -15px #000;
+          box-shadow: inset 0px 30px 40px -15px #000;
   color: #fff;
   margin-top: 65px;
   padding-bottom: 40px;
@@ -431,6 +435,7 @@ input[type="radio"]:checked + label::after {
   margin: 0 2px;
   position: relative;
   text-decoration: none;
+  -webkit-transition: background 0.5s;
   transition: background 0.5s;
   vertical-align: top;
   width: 43px;
@@ -446,7 +451,8 @@ input[type="radio"]:checked + label::after {
   left: 50%;
   position: absolute;
   top: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .social-btn-vk::before {
@@ -557,7 +563,8 @@ input[type="radio"]:checked + label::after {
   left: 50%;
   margin-left: -10px;
   position: absolute;
-  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
   width: 20px;
 }
 
@@ -823,7 +830,8 @@ input[type="radio"]:checked + label::after {
   left: 0;
   position: absolute;
   top: 8px;
-  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
   width: 8px;
 }
 
@@ -902,7 +910,8 @@ input[type="radio"]:checked + label::after {
 
 .product {
   background-color: #fff;
-  box-shadow: 0 0 15px 0 rgba(0, 1, 1, 0.2);
+  -webkit-box-shadow: 0 0 15px 0 rgba(0, 1, 1, 0.2);
+          box-shadow: 0 0 15px 0 rgba(0, 1, 1, 0.2);
   display: inline-block;
   font-size: 14px;
   margin-left: 20px;
@@ -1017,14 +1026,16 @@ input[type="radio"]:checked + label::after {
 }
 
 .product-showcase .large-image {
-  box-shadow: 0 0 15px 0 rgba(0, 1, 1, 0.2);
+  -webkit-box-shadow: 0 0 15px 0 rgba(0, 1, 1, 0.2);
+          box-shadow: 0 0 15px 0 rgba(0, 1, 1, 0.2);
   height: 498px;
   margin-bottom: 20px;
   width: 460px;
 }
 
 .product-showcase .small-image {
-  box-shadow: 0 0 15px 0 rgba(0, 1, 1, 0.2);
+  -webkit-box-shadow: 0 0 15px 0 rgba(0, 1, 1, 0.2);
+          box-shadow: 0 0 15px 0 rgba(0, 1, 1, 0.2);
   height: 149px;
   float: left;
   margin-right: 20px;
@@ -1076,7 +1087,8 @@ input[type="radio"]:checked + label::after {
    ========================================================================== */
 .modal-content {
   background: #f8f3f0 url("../img/light-pattern-bg.jpg");
-  box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+  -webkit-box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+          box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
   color: #000;
   display: none;
   left: 50%;
@@ -1090,7 +1102,8 @@ input[type="radio"]:checked + label::after {
 .modal-content-map {
   background: #e9e5dc url("../img/map-img.jpg");
   border: 7px solid #fff;
-  box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+  -webkit-box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+          box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
   display: none;
   height: 574px;
   left: 50%;
@@ -1107,12 +1120,14 @@ input[type="radio"]:checked + label::after {
 }
 
 .modal-content-show {
-  animation: bounce 0.6s;
+  -webkit-animation: bounce 0.6s;
+          animation: bounce 0.6s;
   display: block;
 }
 
 .modal-error {
-  animation: shake 0.6s;
+  -webkit-animation: shake 0.6s;
+          animation: shake 0.6s;
 }
 
 .modal-overlay {
@@ -1155,11 +1170,13 @@ input[type="radio"]:checked + label::after {
 }
 
 .modal-content-close::before {
-  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
 }
 
 .modal-content-close::after {
-  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
 }
 
 .modal-content h2 {
@@ -1208,7 +1225,8 @@ input[type="radio"]:checked + label::after {
   position: absolute;
   right: 16px;
   top: 50%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
 }
 
 .login-user::after {
@@ -1253,34 +1271,79 @@ input[type="radio"]:checked + label::after {
 /* ==========================================================================
    Animations
    ========================================================================== */
-@keyframes bounce {
+@-webkit-keyframes bounce {
   0% {
-    transform: translateY(-2000px);
+    -webkit-transform: translateY(-2000px);
+            transform: translateY(-2000px);
   }
 
   70% {
-    transform: translateY(30px);
+    -webkit-transform: translateY(30px);
+            transform: translateY(30px);
   }
 
   90% {
-    transform: translateY(-10px);
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
   }
 
   100% {
-    transform: translateY(0);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+@keyframes bounce {
+  0% {
+    -webkit-transform: translateY(-2000px);
+            transform: translateY(-2000px);
+  }
+
+  70% {
+    -webkit-transform: translateY(30px);
+            transform: translateY(30px);
+  }
+
+  90% {
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
+  }
+
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@-webkit-keyframes shake {
+  0%, 100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+
+  10%, 30%, 50%, 70%, 90% {
+    -webkit-transform: translateX(-10px);
+            transform: translateX(-10px);
+  }
+
+  20%, 40%, 60%, 80% {
+    -webkit-transform: translateX(10px);
+            transform: translateX(10px);
   }
 }
 
 @keyframes shake {
   0%, 100% {
-    transform: translateX(0);
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
   }
 
   10%, 30%, 50%, 70%, 90% {
-    transform: translateX(-10px);
+    -webkit-transform: translateX(-10px);
+            transform: translateX(-10px);
   }
 
   20%, 40%, 60%, 80% {
-    transform: translateX(10px);
+    -webkit-transform: translateX(10px);
+            transform: translateX(10px);
   }
 }
