--- a/css/style.css
+++ b/css/style.css
@@ -1097,6 +1097,7 @@ input[type="radio"]:checked + label::after {
   position: absolute;
   top: 120px;
   width: 460px;
+  z-index: 10;
 }
 
 .modal-content-map {
@@ -1112,6 +1113,7 @@ input[type="radio"]:checked + label::after {
   position: fixed;
   top: 50%;
   width: 780px;
+  z-index: 10;
 }
 
 .modal-content-map .modal-content-close {
@@ -1138,6 +1140,7 @@ input[type="radio"]:checked + label::after {
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 10;
 }
 
 .modal-overlay-show {
